fixed template editor z-index

--- a/app/assets/stylesheets/canvas.css
+++ b/app/assets/stylesheets/canvas.css
@@ -501,6 +501,7 @@ div.happy-text span.cursor {
   left: 0;
   background: black;
   opacity: 0.5;
+  z-index: 200;
 }
 .template-editor-container .template-editor {
   overflow: auto;
@@ -512,6 +513,7 @@ div.happy-text span.cursor {
   background: white;
   padding: 20px;
   box-shadow: 0px 0px 40px #000;
+  z-index: 201;
 }
 .template-editor-container .template-editor h2 {
   font-size: 18px;
